--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:leanback-v17:24.0.0'
     compile 'com.android.support:appcompat-v7:24.0.0'
     compile 'com.google.android.exoplayer:exoplayer:r1.5.6'
+    implementation 'com.jakewharton.timber:timber:4.6.1'
 }
