--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
         android:required="true" />
 
     <application
+        android:name=".App"
         android:allowBackup="false"
         android:icon="@drawable/android_48dp"
         android:label="@string/app_name"
